--- a/ww.html
+++ b/ww.html
@@ -34,9 +34,9 @@
     <p>Click on any file to view its content:</p>
     
     <ul>
-        <li><a href="example1" target="_blank">example1.md</a></li>
-        <li><a href="example2" target="_blank">example2.md</a></li>
-        <li><a href="example3" target="_blank">example3.md</a></li>
+        <li><a href="example1" target="_blank">example1</a></li>
+        <li><a href="example2" target="_blank">example2</a></li>
+        <li><a href="example3" target="_blank">example3</a></li>
         <!-- You can manually add more .md files here -->
     </ul>
 
