--- a/w.html
+++ b/w.html
@@ -15,7 +15,7 @@
         const username = 'weilaianke';  // 替换为你的GitHub用户名
         const repo = 'notes';          // 替换为你的仓库名
         const directory = '';            // 目录，如果在根目录就留空
-        const apiUrl = `https://api.github.com/${username}/${repo}/contents/${directory}`;
+        const apiUrl = `https://api.github.com/${username}/${repo}`;
 
         // 获取文件列表
         fetch(apiUrl)
