--- a/ww.html
+++ b/ww.html
@@ -36,6 +36,9 @@
     <ul>
         <li><a href="example1" target="_blank">example1.md</a></li>
         <li><a href="example2" target="_blank">example2.md</a></li>
+        <li><a href="https://weilaianke.github.io/notes/java%E4%BB%A3%E7%A0%81%E7%9F%A5%E8%AF%86/java%E4%BB%A3%E7%A0%81%E7%9F%A5%E8%AF%86.md" target="_blank">java代码知识/java代码知识.md</a></li>
+        <li><a href="https://weilaianke.github.io/notes/java%E4%BB%A3%E7%A0%81%E7%9F%A5%E8%AF%86/java%E4%BB%A3%E7%A0%81%E7%9F%A5%E8%AF%86.md" target="_blank">java代码知识/java代码知识.md</a></li>
+
         <li><a href="example3" target="_blank">java代码知识/java代码知识.md</a></li>
         <!-- You can manually add more .md files here -->
     </ul>
